# testing-setup

./: .gitattributes  .gitignore  .gitlint  CHANGELOG.md  CODE_OF_CONDUCT.md  Cargo.toml  README.md  bench.py  coverage.py  index.html  lcov.info  release-please-config.json  test.py
.cargo/: config.toml
.github/workflows/: convential-commit.yml  coverage.yml  docs.yml  master.yml  my-pull.yml  my-push.yml  pull-request.yml  pull.yml  push-coverage.yml  push.yml  release-please.yml  repo-sync.yml  rust-clippy.yml  rust.yml  update-rustdoc.yml
build-checks/: Cargo.toml
build-checks/src/: lib.rs
ci/: bench.py  commit.py  coverage.py  lcov.info
ci/coverage/: index.html
ci/coverage/complex_application/: build.rs.html  index.html
ci/doc/: crates.js  help.html  index.html  search-index.js  settings.html  source-files.js
ci/doc/complex_application/: all.html  fn.add.html  fn.div.html  fn.main.html  index.html  sidebar-items.js
ci/doc/library_one/: all.html  (+4 more)
complex_application/: Cargo.toml  README.md  build.rs  rust-toolchain.toml  setup.py
complex_application/benches/: benchmark.rs
complex_application/src/: main.rs  simple_module.rs
complex_application/tests/: integration-tests.rs  more-integration-tests.rs
coverage/: index.html
coverage/complex_application/: build.rs.html  index.html
doc/: settings.html
doc/simple_application/: all.html  sidebar-items.js
library_one/: CHANGELOG.md  Cargo.toml  README.md  size.json
library_one/src/: lib.rs
simple_application/: Cargo.toml  README.md  build.rs  fmt.toml
simple_application/src/: main.rs
(+67 files in other folders)
