[package]
name = "simple_application"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
library_one = { version="0.1.0", path="../library_one" }

[build-dependencies]
build-checks = { version = "0.1.0", path="../build-checks" }